--- a/themes/socialbase/components/04-organisms/hero/hero.scss
+++ b/themes/socialbase/components/04-organisms/hero/hero.scss
@@ -143,6 +143,8 @@
     padding-left: 1rem;
     flex: 0 0 25%;
     max-width: 25%;
+    display: flex;
+    justify-content: flex-end;
   }
 }
 
